RESOLVED FIXED159269
[Mac] Crash registering AVFoundation media engine
https://bugs.webkit.org/show_bug.cgi?id=159269
Summary [Mac] Crash registering AVFoundation media engine
Eric Carlson
Reported 2016-06-29 12:39:53 PDT
r199326 made it possible for HTMLMediaElement::originsInMediaCache, HTMLMediaElement::clearMediaCache and HTMLMediaElement::clearMediaCacheForOrigins to be called from multiple threads, but the media engine registration code isn't thread safe.
Attachments
Proposed patch (13.04 KB, patch)
2016-06-29 12:59 PDT, Eric Carlson
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (693.91 KB, application/zip)
2016-06-29 13:56 PDT, Build Bot
no flags
Eric Carlson
Comment 1 2016-06-29 12:40:57 PDT
Eric Carlson
Comment 2 2016-06-29 12:59:56 PDT
Created attachment 282365 [details] Proposed patch
Build Bot
Comment 3 2016-06-29 13:56:34 PDT
Comment on attachment 282365 [details] Proposed patch Attachment 282365 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1596164 New failing tests: animations/multiple-backgrounds.html
Build Bot
Comment 4 2016-06-29 13:56:36 PDT
Created attachment 282371 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Brent Fulgham
Comment 5 2016-06-29 16:10:03 PDT
Comment on attachment 282365 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=282365&action=review Looks great! Would it be safer to initialize haveVector to false so that it's always in a known state? > Source/WebCore/platform/graphics/MediaPlayer.cpp:189 > + static bool haveVector; Should this be initialized to false?
Brent Fulgham
Comment 6 2016-06-29 16:11:05 PDT
(In reply to comment #3) > Comment on attachment 282365 [details] > Proposed patch > > Attachment 282365 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/1596164 > > New failing tests: > animations/multiple-backgrounds.html I don't believe that this test failure can be attributed to these AVFoundation Media Engine changes, especially when that test does not use a media element.
Eric Carlson
Comment 7 2016-06-29 16:49:35 PDT
(In reply to comment #5) > Comment on attachment 282365 [details] > Proposed patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=282365&action=review > > Looks great! Would it be safer to initialize haveVector to false so that > it's always in a known state? > > > Source/WebCore/platform/graphics/MediaPlayer.cpp:189 > > + static bool haveVector; > > Should this be initialized to false? It is a static, so the default value is false
Eric Carlson
Comment 8 2016-06-30 07:28:35 PDT
Note You need to log in before you can comment on or make changes to this bug.